Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80180

Qml Text last character clipped on some displays

XMLWordPrintable

    • ac179e235ba0c01fff6dd5f4ad2cc9696fe78822 (qt/qtdeclarative/5.15)

      The Qml type Text seems to have the text clipped on the right side on some displays. The degree of clipping varies and the result may be from no clipping to the last letter being clipped almost entirely and anything in between.

      Steps to reproduce:

      1. Run the attached project
      2. Compare texts (above with a trailing space and below with none).

        1. qtbug80180.zip
          1 kB
        2. qtdiag.txt
          8 kB
        3. qtbug80180_text_clipped.png
          qtbug80180_text_clipped.png
          7 kB
        4. clip.png
          clip.png
          7 kB
        5. qtdiag-ct.txt
          7 kB
        6. qtdiag-ed.txt
          7 kB
        7. qthello-ct.jpg
          qthello-ct.jpg
          15 kB
        8. qthello-ed.jpg
          qthello-ed.jpg
          18 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            miikapernu Miika Pernu
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes